techbriliance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: springboot-service
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: angular-service
              port:
                number: 80
